Тема “Улучшение качества  POS-taggera” на вебинаре был рассмотрен пример тегирования с использованием корпуса на Русском языке, вам необходимо улучшить модель что бы качество классификации было выше чем с лог регрессией

--- a/Lesson3/Lesson3.ipynb
+++ b/Lesson3/Lesson3.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Используем предобработанные в рамках 1-ого домашнего задания датасет combine_df_prepocessed.pkl. Используем столбец 'clean_tweet'."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -25,10 +18,293 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyconll"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer, HashingVectorizer\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import xgboost as xgb\n",
+    "from sklearn.preprocessing import LabelEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "  0 77.2M    0 53469    0     0  53469      0  0:25:15  0:00:01  0:25:14 50300\n",
+      "  1 77.2M    1 1150k    0     0   575k      0  0:02:17  0:00:02  0:02:15  557k\n",
+      "  8 77.2M    8 6593k    0     0  2197k      0  0:00:36  0:00:03  0:00:33 2018k\n",
+      " 15 77.2M   15 11.5M    0     0  2968k      0  0:00:26  0:00:04  0:00:22 2911k\n",
+      " 20 77.2M   20 15.8M    0     0  3254k      0  0:00:24  0:00:05  0:00:19 3306k\n",
+      " 23 77.2M   23 18.3M    0     0  3125k      0  0:00:25  0:00:06  0:00:19 3694k\n",
+      " 28 77.2M   28 22.2M    0     0  3250k      0  0:00:24  0:00:07  0:00:17 4320k\n",
+      " 34 77.2M   34 27.0M    0     0  3460k      0  0:00:22  0:00:08  0:00:14 4396k\n",
+      " 41 77.2M   41 32.1M    0     0  3657k      0  0:00:21  0:00:09  0:00:12 4220k\n",
+      " 51 77.2M   51 39.5M    0     0  4052k      0  0:00:19  0:00:10  0:00:09 4928k\n",
+      " 60 77.2M   60 47.0M    0     0  4381k      0  0:00:18  0:00:11  0:00:07 5961k\n",
+      " 70 77.2M   70 54.3M    0     0  4640k      0  0:00:17  0:00:12  0:00:05 6585k\n",
+      " 79 77.2M   79 61.4M    0     0  4840k      0  0:00:16  0:00:13  0:00:03 7049k\n",
+      " 89 77.2M   89 69.4M    0     0  5082k      0  0:00:15  0:00:14  0:00:01 7648k\n",
+      "100 77.2M  100 77.2M    0     0  5276k      0  0:00:15  0:00:15 --:--:-- 7796k\n",
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "  0 10.3M    0  8226    0     0   8226      0  0:22:05  0:00:01  0:22:04  7312\n",
+      "  3 10.3M    3  417k    0     0   417k      0  0:00:25  0:00:01  0:00:24  212k\n",
+      " 61 10.3M   61 6554k    0     0  2184k      0  0:00:04  0:00:03  0:00:01 2076k\n",
+      "100 10.3M  100 10.3M    0     0  3549k      0  0:00:03  0:00:03 --:--:-- 2769k\n"
+     ]
+    }
+   ],
+   "source": [
+    "!curl -O https://raw.githubusercontent.com/UniversalDependencies/UD_Russian-SynTagRus/master/ru_syntagrus-ud-train.conllu\n",
+    "!curl -O https://raw.githubusercontent.com/UniversalDependencies/UD_Russian-SynTagRus/master/ru_syntagrus-ud-dev.conllu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_train = pyconll.load_from_file('datasets/ru_syntagrus-ud-train.conllu')\n",
+    "full_test = pyconll.load_from_file('datasets/ru_syntagrus-ud-dev.conllu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fdata_train = []\n",
+    "for sent in full_train[:]:\n",
+    "    fdata_train.append([(token.form, token.upos) for token in sent])\n",
+    "    \n",
+    "fdata_test = []\n",
+    "for sent in full_test[:]:\n",
+    "    fdata_test.append([(token.form, token.upos) for token in sent])\n",
+    "    \n",
+    "fdata_sent_test = []\n",
+    "for sent in full_test[:]:\n",
+    "    fdata_sent_test.append([token.form for token in sent])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_tok = []\n",
+    "train_label = []\n",
+    "for sent in fdata_train[:]:\n",
+    "    for tok in sent:\n",
+    "        train_tok.append(tok[0])\n",
+    "        train_label.append('NO_TAG' if tok[1] is None else tok[1])\n",
+    "        \n",
+    "test_tok = []\n",
+    "test_label = []\n",
+    "for sent in fdata_test[:]:\n",
+    "    for tok in sent:\n",
+    "        test_tok.append(tok[0])\n",
+    "        test_label.append('NO_TAG' if tok[1] is None else tok[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "le = LabelEncoder()\n",
+    "train_enc_labels = le.fit_transform(train_label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_enc_labels = le.transform(test_label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['ADJ', 'ADP', 'ADV', 'AUX', 'CCONJ', 'DET', 'INTJ', 'NOUN',\n",
+       "       'NO_TAG', 'NUM', 'PART', 'PRON', 'PROPN', 'PUNCT', 'SCONJ', 'SYM',\n",
+       "       'VERB', 'X'], dtype='<U6')"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "le.classes_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hvectorizer = HashingVectorizer(ngram_range=(1, 3), analyzer='char', n_features=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = hvectorizer.fit_transform(train_tok)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = hvectorizer.transform(test_tok)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(871526, 500)"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\sych_\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:764: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(max_iter=20, random_state=0)"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr = LogisticRegression(random_state=0, max_iter=20)\n",
+    "lr.fit(X_train, train_enc_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = lr.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7573298958649277"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(test_enc_labels, pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Скор улучшился благодаря n_features=500 и max_iter=20"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Тема “Создание признакового пространства”"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Используем предобработанные в рамках 1-ого домашнего задания датасет combine_df_prepocessed.pkl. Используем столбец 'clean_tweet'."
    ]
   },
   {
