взять предобученный эмбединг(к примеру word2vec) и загрузить в слой Embedding

--- a/Lesson4/Lesson4.ipynb
+++ b/Lesson4/Lesson4.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
        "1  10000_8.txt  Homelessness (or Houselessness as George Carlin stated) has been an issue for years but never a plan to help those on the street that were once considered human who did everything from going to school, work, or vote for the matter. Most people think of the homeless as just a lost cause while worrying about things such as racism, the war on Iraq, pressuring kids to succeed, technology, the elections, inflation, or worrying if they'll be next to end up on the streets.<br /><br />But what if you were given a bet to live on the streets for a month without the luxuries you once had from a home, the entertainment sets, a bathroom, pictures on the wall, a computer, and everything you once treasure to see what it's like to be homeless? That is Goddard Bolt's lesson.<br /><br />Mel Brooks (who ...      1  homelessness or houselessness as george carlin stated has been an issue for years but never a plan to help those on the street that were once considered human who did everything from going to school work or vote for the matter most people think of the homeless as just a lost cause while worrying about things such as racism the war on iraq pressuring kids to succeed technology the elections inflation or worrying if theyll be next to end up on the streets  but what if you were given a bet to live on the streets for a month without the luxuries you once had from a home the entertainment sets a bathroom pictures on the wall a computer and everything you once treasure to see what its like to be homeless that is goddard bolts lesson  mel brooks who directs who stars as bolt plays a rich man ..."
       ]
      },
-     "execution_count": 118,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
        "1  10000_8.txt  Homelessness (or Houselessness as George Carlin stated) has been an issue for years but never a plan to help those on the street that were once considered human who did everything from going to school, work, or vote for the matter. Most people think of the homeless as just a lost cause while worrying about things such as racism, the war on Iraq, pressuring kids to succeed, technology, the elections, inflation, or worrying if they'll be next to end up on the streets.<br /><br />But what if you were given a bet to live on the streets for a month without the luxuries you once had from a home, the entertainment sets, a bathroom, pictures on the wall, a computer, and everything you once treasure to see what it's like to be homeless? That is Goddard Bolt's lesson.<br /><br />Mel Brooks (who ...      1  homelessness or houselessness as george carlin stated has been an issue for years but never a plan to help those on the street that were once considered human who did everything from going to school work or vote for the matter most people think of the homeless as just a lost cause while worrying about things such as racism the war on iraq pressuring kids to succeed technology the elections inflation or worrying if theyll be next to end up on the streets  but what if you were given a bet to live on the streets for a month without the luxuries you once had from a home the entertainment sets a bathroom pictures on the wall a computer and everything you once treasure to see what its like to be homeless that is goddard bolts lesson  mel brooks who directs who stars as bolt plays a rich man ..."
       ]
      },
-     "execution_count": 119,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,11 +767,305 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### взять предобученный эмбединг(к примеру word2vec) и загрузить в слой Embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 50000 entries, 0 to 49999\n",
+      "Data columns (total 4 columns):\n",
+      "file_name     50000 non-null object\n",
+      "text          50000 non-null object\n",
+      "label         50000 non-null int64\n",
+      "clean_text    50000 non-null object\n",
+      "dtypes: int64(1), object(3)\n",
+      "memory usage: 1.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.concat([train,test], axis=0, ignore_index=True)\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import string\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "review_lines = list()\n",
+    "lines = df['clean_text'].to_list()\n",
+    "\n",
+    "for line in lines:\n",
+    "    tokens = word_tokenize(line)\n",
+    "    stop_words = set(stopwords.words('english'))\n",
+    "    words = [w for w in tokens if not w in stop_words]\n",
+    "    review_lines.append(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50000"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(review_lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vocabulary size: 111544\n"
+     ]
+    }
+   ],
+   "source": [
+    "import gensim\n",
+    "\n",
+    "model = gensim.models.Word2Vec(sentences=review_lines, size=embedding_dim, window=5, workers=4, min_count=1)\n",
+    "words = list(model.wv.vocab)\n",
+    "print('Vocabulary size: %d' % len(words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('awful', 0.9763755798339844),\n",
+       " ('terrible', 0.9744258522987366),\n",
+       " ('bad', 0.883530855178833),\n",
+       " ('awesome', 0.862552285194397),\n",
+       " ('sucks', 0.8596176505088806),\n",
+       " ('worthless', 0.858160138130188),\n",
+       " ('atrocious', 0.8503753542900085),\n",
+       " ('audibly', 0.8386166095733643),\n",
+       " ('ridiculous', 0.8333313465118408),\n",
+       " ('pathetic', 0.8329566717147827)]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.wv.most_similar('horrible')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save model\n",
+    "filename = 'embedding_word2vec.txt'\n",
+    "model.wv.save_word2vec_format(filename, binary=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "\n",
+    "embeddings_index = {}\n",
+    "f = open(os.path.join('', 'embedding_word2vec.txt'), encoding = 'utf-8')\n",
+    "for line in f:\n",
+    "    values = line.split()\n",
+    "    word = values[0]\n",
+    "    coefs = np.asarray(values[1:])\n",
+    "    embeddings_index[word] = coefs\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_features = 10000\n",
+    "sequence_length = 250"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 111544 unique tokens.\n",
+      "Shape of review tensor: (50000, 250)\n",
+      "Shape of sentiment tensor: (50000,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tensorflow.python.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.python.keras.preprocessing.sequence import pad_sequences\n",
+    "\n",
+    "tokenizer_obj = Tokenizer()\n",
+    "tokenizer_obj.fit_on_texts(review_lines)\n",
+    "sequences = tokenizer_obj.texts_to_sequences(review_lines)\n",
+    "\n",
+    "word_index = tokenizer_obj.word_index\n",
+    "print('Found %s unique tokens.' % len(word_index))\n",
+    "\n",
+    "review_pad = pad_sequences(sequences, maxlen=sequence_length)\n",
+    "sentiment = df['label'].values\n",
+    "print('Shape of review tensor:', review_pad.shape)\n",
+    "print('Shape of sentiment tensor:', sentiment.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_words = len(word_index) + 1\n",
+    "emdedding_matrix = np.zeros((num_words, embedding_dim))\n",
+    "\n",
+    "for word, i in word_index.items():\n",
+    "    if i > num_words:\n",
+    "        continue\n",
+    "    embedding_vector = embeddings_index.get(word)\n",
+    "    if embedding_vector is not None:\n",
+    "        emdedding_matrix[i] = embedding_vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "111545\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(num_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "embedding_2 (Embedding)      (None, None, 16)          1784720   \n",
+      "_________________________________________________________________\n",
+      "global_average_pooling1d_2 ( (None, 16)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_4 (Dense)              (None, 145)               2465      \n",
+      "_________________________________________________________________\n",
+      "dense_5 (Dense)              (None, 1)                 146       \n",
+      "=================================================================\n",
+      "Total params: 1,787,331\n",
+      "Trainable params: 2,611\n",
+      "Non-trainable params: 1,784,720\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.initializers import Constant\n",
+    "\n",
+    "model = tf.keras.Sequential([\n",
+    "  layers.Embedding(num_words, embedding_dim, embeddings_initializer=Constant(emdedding_matrix), trainable=False),\n",
+    "  #layers.Dropout(0.2),\n",
+    "  layers.GlobalAveragePooling1D(),\n",
+    "  #layers.Dropout(0.2),\n",
+    "  layers.Dense(145),\n",
+    "  layers.Dense(1)])\n",
+    "\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(loss=losses.BinaryCrossentropy(from_logits=True),\n",
+    "              optimizer='adam',\n",
+    "              metrics=tf.metrics.BinaryAccuracy(threshold=0.0))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# split the data into a training set and a validation set\n",
+    "VALIDATION_SPLIT = 0.2\n",
+    "\n",
+    "indices = np.arange(review_pad.shape[0])\n",
+    "np.random.shaffle(indices)\n",
+    "review_pad = review_pad[indices]\n",
+    "sentiment = sentiment[indices]\n",
+    "num_validation_samples = int(VALIDATION_SPLIT * review_pad.shape[0])\n",
+    "\n",
+    "X_train_pad = review_pad[:-num_validation_samples]\n",
+    "y_train = sentiment[:-num_validation_samples]\n"
+   ]
   }
  ],
  "metadata": {
